--- a/fastlane/metadata/ms/release_notes.txt
+++ b/fastlane/metadata/ms/release_notes.txt
@@ -1,2 +1,2 @@
-• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back.
-• We also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. It's hands down our favorite bugfix in this release. 
+• Kini anda boleh menukar antara kamera depan dan belakang dalam panggilan kumpulan walaupun orang lain belum menyertai panggilan. 
+• Kami membaiki pepijat yang menghalang sesetengah pengguna daripada menyertai kumpulan baru atau menyertai semula kumpulan sedia ada. Kami juga membaiki pepijat yang menyebabkan kesukaran menatal paparan skrin pada masa yang sama panggilan kumpulan berlangsung dan tangan diangkat. 
