--- a/fastlane/metadata/es-ES/release_notes.txt
+++ b/fastlane/metadata/es-ES/release_notes.txt
@@ -1,2 +1,2 @@
-• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back.
-• We also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. It's hands down our favorite bugfix in this release. 
+• Ahora puedes cambiar de cámara, incluso cuando no haya nadie más en una llamada grupal. ¿Estás en un sitio con vistas impresionantes? Activa la cámara trasera para que todos en la llamada disfruten del paisaje, o pásate de nuevo a la cámara frontal para seguir conversando. 
+• Hemos corregido un error que impedía que algunas personas pudieran unirse a un nuevo grupo o volver a uno al que ya pertenecían. También hemos corregido un error que dificultaba cambiar entre vistas durante las llamadas grupales cuando alguien levantaba la mano. Sin duda, estas son nuestras correcciones favoritas de esta versión. 
