--- a/fastlane/metadata/fi/release_notes.txt
+++ b/fastlane/metadata/fi/release_notes.txt
@@ -1,2 +1,2 @@
-• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back.
-• We also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. It's hands down our favorite bugfix in this release. 
+• Nyt voit vaihtaa etu- ja takakameran välillä ryhmäpuhelussa, vaikka puhelussa ei olisi vielä muita. 
+• Korjasimme virheen, joka esti joitakin käyttäjiä liittymästä uuteen ryhmään tai liittymästä uudelleen olemassa olevaan ryhmään, ja korjasimme myös virheen, joka vaikeutti näkymien selaamista ryhmäpuheluiden aikana kättä nostettaessa. 
