--- a/fastlane/metadata/hr/release_notes.txt
+++ b/fastlane/metadata/hr/release_notes.txt
@@ -1,2 +1,2 @@
-• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back.
-• We also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. It's hands down our favorite bugfix in this release. 
+• Sada se možete prebacivati između prednje i stražnje kamere u grupnom pozivu čak i ako se drugi sudionici još nisu pridružili. 
+• Ispravili smo programsku pogrešku koja je sprječavala određene korisnike da se pridruže novoj grupi ili da se ponovno pridruže postojećoj. Također smo ispravili pogrešku koja je otežavala prebacivanje prikaza tijekom grupnih poziva kada je podignuta ruka. 
