--- a/fastlane/metadata/hu/release_notes.txt
+++ b/fastlane/metadata/hu/release_notes.txt
@@ -1,2 +1,2 @@
-• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back.
-• We also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. It's hands down our favorite bugfix in this release. 
+• Mostantól csoportos hívásban válthatsz az elülső és a hátsó kamera között, még akkor is, ha mások még nem csatlakoztak a híváshoz. 
+• Kijavítottunk egy hibát, amely megakadályozta, hogy egyes felhasználók csatlakozzanak egy új csoporthoz, vagy újból csatlakozzanak egy meglévő csoporthoz, valamint kijavítottunk egy olyan hibát is, amely megnehezítette a nézetek közötti görgetést csoportos hívások közben, miközben valaki felemelte a kezét. Ezek a kedvenc hibajavításaink ebben a kiadásban. 
