--- a/fastlane/metadata/vi/release_notes.txt
+++ b/fastlane/metadata/vi/release_notes.txt
@@ -1,2 +1,2 @@
-• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back.
-• We also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. It's hands down our favorite bugfix in this release. 
+• Giờ đây bạn có thể chuyển đổi giữa camera trước và sau trong một cuộc gọi nhóm kể cả khi mọi người chưa tham gia cuộc gọi. 
+• Chúng tôi đã sửa lỗi khiến một số người dùng không thể tham gia nhóm mới hoặc tham gia lại nhóm đang tồn tại, và lỗi khó cuộn giữa các chế độ hiển thị trong các cuộc gọi nhóm khi có người giơ tay cũng đã được sửa. 
